added script for changing the rofi theme

--- a/.config/bspwm/eww/colors.scss
+++ b/.config/bspwm/eww/colors.scss
@@ -1,13 +1,13 @@
-// Eww colors for Silvia rice
-$bg: #282828;
-$bg-alt: #2E2E2E;
-$fg: #fbf1c7;
-$black: #a89984;
+// Eww colors for Isabel rice
+$bg: #14171c;
+$bg-alt: #181b21;
+$fg: #b8bfe5;
+$black: #5c6370;
 $lightblack: #262831;
-$red: #fb4934;
-$blue: #83a598;
-$cyan: #8ec07c;
-$magenta: #d3869b;
-$green: #b8bb26;
-$yellow: #fabd2f;
+$red: #be5046;
+$blue: #4889be;
+$cyan: #49919a;
+$magenta: #7560d3;
+$green: #81ae5f;
+$yellow: #d19a66;
 $archicon: #0f94d2;
