--- a/.config/waybar/themes/Wall-Dcol.css
+++ b/.config/waybar/themes/Wall-Dcol.css
@@ -1,7 +1,7 @@
 @define-color bar-bg rgba(0, 0, 0, 0);
-@define-color main-bg #101319;
-@define-color main-fg #AAC1F0;
-@define-color wb-act-bg #E5ECDE;
-@define-color wb-act-fg #293652;
-@define-color wb-hvr-bg #4B7D77;
-@define-color wb-hvr-fg #F0C9AA;
+@define-color main-bg #120D23;
+@define-color main-fg #BAAAF0;
+@define-color wb-act-bg #264A76;
+@define-color wb-act-fg #322952;
+@define-color wb-hvr-bg #4B4C7D;
+@define-color wb-hvr-fg #AADFF0;
