--- a/.config/bspwm/eww/colors.scss
+++ b/.config/bspwm/eww/colors.scss
@@ -1,13 +1,13 @@
-// Eww colors for Cynthia rice
-$bg: #181616;
-$bg-alt: #1c1a1a;
-$fg: #c5c9c5;
-$black: #a6a69c;
+// Eww colors for Cristina rice
+$bg: #232136;
+$bg-alt: #2a2740
+$fg: #e0def4;
+$black: #6f6e85;
 $lightblack: #262831;
-$red: #c4746e;
-$blue: #8ba4b0;
-$cyan: #8ea4a2;
-$magenta: #a292a3;
-$green: #8a9a7b;
-$yellow: #c4b28a;
+$red: #ea6f91;
+$blue: #34738e;
+$cyan: #eabbb9;
+$magenta: #c3a5e6;
+$green: #9bced7;
+$yellow: #f1ca93;
 $archicon: #0f94d2;
