--- a/.config/waybar/themes/Wall-Dcol.css
+++ b/.config/waybar/themes/Wall-Dcol.css
@@ -1,7 +1,7 @@
 @define-color bar-bg rgba(0, 0, 0, 0);
-@define-color main-bg #120D23;
-@define-color main-fg #BAAAF0;
-@define-color wb-act-bg #264A76;
-@define-color wb-act-fg #322952;
-@define-color wb-hvr-bg #4B4C7D;
-@define-color wb-hvr-fg #AADFF0;
+@define-color main-bg #280D3D;
+@define-color main-fg #D1AAF0;
+@define-color wb-act-bg #911C3C;
+@define-color wb-act-fg #402952;
+@define-color wb-hvr-bg #6A4B7D;
+@define-color wb-hvr-fg #CFAAF0;
