--- a/.config/bspwm/eww/colors.scss
+++ b/.config/bspwm/eww/colors.scss
@@ -1,13 +1,13 @@
-// Eww colors for Emilia rice
-$bg: #1a1b26;
-$bg-alt: #222330;
-$fg: #c0caf5;
-$black: #414868;
-$lightblack: #262831;
-$red: #f7768e;
-$blue: #7aa2f7;
-$cyan: #7dcfff;
-$magenta: #bb9af7;
-$green: #9ece6a;
-$yellow: #e0af68;
-$archicon: #0f94d2;
+// Eww colors for Aing rice
+$bg: #161a22;
+$bg-alt: #262c3a;
+$fg: #cadee7;
+$black: #1e232e;
+$lightblack: #2d3546;
+$red: #927887;
+$blue: #D2ACA9;
+$cyan: #99A9CC;
+$magenta: #E3C4BA;
+$green: #6E91BA;
+$yellow: #A393A2;
+$archicon: #0f1116;
