--- a/.config/waybar/themes/Wall-Dcol.css
+++ b/.config/waybar/themes/Wall-Dcol.css
@@ -1,7 +1,7 @@
 @define-color bar-bg rgba(0, 0, 0, 0);
-@define-color main-bg #120D23;
-@define-color main-fg #BAAAF0;
-@define-color wb-act-bg #264A76;
-@define-color wb-act-fg #322952;
-@define-color wb-hvr-bg #4B4C7D;
-@define-color wb-hvr-fg #AADFF0;
+@define-color main-bg #060606;
+@define-color main-fg #D6D6D6;
+@define-color wb-act-bg #6C6C6C;
+@define-color wb-act-fg #1A1A1A;
+@define-color wb-hvr-bg #3D3D3D;
+@define-color wb-hvr-fg #D6D6D6;
